fix section collapsing

--- a/04_rails/09_positioning_and_media_queries/assets/positioning_media_queries.css
+++ b/04_rails/09_positioning_and_media_queries/assets/positioning_media_queries.css
@@ -111,6 +111,8 @@ label {
 
 /* Media Queries! */
 @media all and (max-width: 900px) {
-/* Code Goes Here */
+  .col {
+    min-width: 540px;
+  }
 }
 
